<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">SensorPlex</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="data">Available</string>
    <string name="led_control_switch_name">LED Control</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="datetime_caption">Date and Time</string>
    <string name="caption_start">Start</string>
    <string name="caption_temperature">Temperature</string>
    <string name="caption_userdata">User Data</string>
    <string name="caption_gyros">Gyros</string>
    <string name="caption_xaxis">X:</string>
    <string name="caption_yaxis">Y:</string>
    <string name="caption_zaxis">Z:</string>
    <string name="caption_accels">Accels</string>
    <string name="caption_quaternion">Q</string>
    <string name="caption_waxis">W:</string>
    <string name="caption_compass">Compass</string>
    <string name="caption_pressure">Pressure</string>
    <string name="caption_battery">Battery</string>
    <string name="caption_rssi">RSSI</string>
    <string name="caption_timestamp">TimeStamp</string>
    <string name="caption_euler">EulerAngle</string>
    <string name="caption_linear">LinAccel</string>
    <string name="caption_firmware">Firmware:</string>
    <string name="caption_get">Get</string>
    <string name="caption_battery_voltage">Battery:</string>
    <string name="caption_charge">Charge:</string>
    <string name="caption_errors">Errors</string>
    <string name="caption_email_data">Email data</string>
    <string name="caption_stream">Streaming</string>
    <string name="caption_logging">Logging</string>
</resources>
